--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 name = "tt-tools-common"
-version = "1.4.17"
+#version = "1.4.17"
+version = "0.0.1"
 description = "Common library for Tenstorrent tooling"
 readme = "README.md"
 requires-python = ">=3.7"
