backing out the dynamic url bit

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -403,7 +403,7 @@ jobs:
 
     environment:
       name: pypi-release
-      url: https://test.pypi.org/p/${{ needs.versionchange.outputs.package_name }}-temp
+      url: https://test.pypi.org/p/tt-tools-common-temp
 
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
@@ -436,7 +436,7 @@ jobs:
     #if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     environment:
       name: pypi
-      url: https://pypi.org/p/${{ needs.versionchange.outputs.package_name }}
+      url: https://pypi.org/p/tt-tools-common
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
